--- a/stylesheet.css
+++ b/stylesheet.css
@@ -477,7 +477,7 @@ header{
   font-style: normal;
   letter-spacing: 1px;
 	position: relative;
-  width:63%;
+  max-width:800px;
   margin:0 auto;
 }
 
@@ -562,9 +562,9 @@ header{
     line-height: 40px;
     font-weight: 600;
   	position: relative;
-    display: inline-block;
     text-align: center;
-    margin:0 20px;
+    max-width:800px;
+    margin: 0 auto;
   }
   .focus{
     font-weight: 600;
@@ -583,7 +583,8 @@ header{
     padding-top: 32px;
     letter-spacing: 2px;
   }
-  .isara-container h1{
+  .isara-container {
+    padding: 0 20px;
 
   }
   .people{
@@ -592,9 +593,10 @@ header{
 }
 @media(max-width:760px){
   .isara-container h1{
-    padding:20px 60px;
+    padding:20px 30px;
     font-size: 18px;
-    margin:0 20px;
+    margin:0 10px;
+    max-width:700px;
   }
   .isara-container h1::before, .isara-container h1::after {
   	width: 30px;
